--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -21,4 +21,4 @@ security:
             anonymous: ~
 
     access_control:
-        - { path: ^/, role: ROLE_ADMIN }
+        - { path: ^/, role: ROLE_USER }
