All classes useful for user management

--- a/src/AppBundle/Resources/config/doctrine/Activity.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Activity.orm.yml
@@ -10,7 +10,7 @@ AppBundle\Entity\Activity:
                 fixed: true
             id: true
             generator:
-                strategy: IDENTITY
+                strategy: NONE
     fields:
         label:
             type: string
