--- a/src/AppBundle/Resources/config/doctrine/CourseTeacher.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/CourseTeacher.orm.yml
@@ -14,7 +14,7 @@ AppBundle\Entity\CourseTeacher:
                 fixed: true
             id: true
             generator:
-                strategy: IDENTITY
+                strategy: NONE
     fields:
         firstname:
             type: string
