--- a/src/AppBundle/Resources/config/doctrine/CourseTutoringResources.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/CourseTutoringResources.orm.yml
@@ -14,7 +14,7 @@ AppBundle\Entity\CourseTutoringResources:
                 fixed: true
             id: true
             generator:
-                strategy: IDENTITY
+                strategy: NONE
     fields:
         description:
             type: text
