--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -30,9 +30,32 @@ services:
         tags: ['controller.service_arguments']
 
 
+    # GENERAL
+    _instanceof:
+        AppBundle\Port\Action\ActionInterface:
+            public: true
+            autowire: true
+            tags: ['controller.service_arguments']
+
+
+    # ALIAS
+    AppBundle\Port\Repository\UserRepositoryInterface: '@user_doctrine_repository'
+
+
     # AUTHENTICATORS
     AppBundle\Security\Authenticator\TestAuthenticator:
         arguments: [%test_authenticator%]
+
+    # ENTITY MANAGER
+    syllabus_entity_manager:
+        class: Doctrine\ORM\EntityManager
+        factory: ['@doctrine', getManager]
+        arguments: ['syllabus']
+
+    # REPOSITORY
+    user_doctrine_repository:
+        class: AppBundle\Repository\Doctrine\UserDoctrineRepository
+        arguments: ['@syllabus_entity_manager']
 
     # PROVIDERS
     AppBundle\Security\Provider\TestUserProvider:
