--- a/src/AppBundle/Resources/config/doctrine/CoursePrerequisite.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/CoursePrerequisite.orm.yml
@@ -14,7 +14,7 @@ AppBundle\Entity\CoursePrerequisite:
                 fixed: true
             id: true
             generator:
-                strategy: IDENTITY
+                strategy: NONE
     fields:
         description:
             type: text
