--- a/src/AppBundle/Resources/config/doctrine/SectionType.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/SectionType.orm.yml
@@ -10,7 +10,7 @@ AppBundle\Entity\SectionType:
                 fixed: true
             id: true
             generator:
-                strategy: IDENTITY
+                strategy: NONE
     fields:
         code:
             type: string
