--- a/src/AppBundle/Resources/config/doctrine/Activity.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Activity.orm.yml
@@ -40,7 +40,7 @@ AppBundle\Entity\Activity:
             nullable: false
             options:
                 default: '0'
-        order:
+        ord:
             type: integer
             nullable: false
             options:
