--- a/src/AppBundle/Resources/config/doctrine/CourseSectionActivity.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/CourseSectionActivity.orm.yml
@@ -25,7 +25,7 @@ AppBundle\Entity\CourseSectionActivity:
             length: 255
             options:
                 fixed: false
-        order:
+        ord:
             type: integer
             nullable: false
             options:
