--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -10,6 +10,14 @@ parameters:
     syllabus_database_password: null
     syllabus_database_charset: UTF8
 
+    syllabus_test_database_driver: pdo_mysql
+    syllabus_test_database_host: 127.0.0.1
+    syllabus_test_database_port: null
+    syllabus_test_database_name: syllabus_test
+    syllabus_test_database_user: root
+    syllabus_test_database_password: null
+    syllabus_test_database_charset: UTF8
+
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: ~
