--- a/composer.json
+++ b/composer.json
@@ -37,9 +37,7 @@
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "phpunit/phpunit": "^5.7",
         "sensio/generator-bundle": "^3.0",
-        "symfony/browser-kit": "^4.2",
-        "symfony/css-selector": "^4.2",
-        "symfony/phpunit-bridge": "*"
+        "symfony/phpunit-bridge": "^4.2"
     },
     "scripts": {
         "symfony-scripts": [
