--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -19,6 +19,7 @@ security:
                 authenticator: AppBundle\Security\Authenticator\TestAuthenticator
                 provider: test
             anonymous: ~
+            logout_on_user_change: true
 
     access_control:
         - { path: ^/, role: ROLE_USER }
