--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -18,6 +18,7 @@ security:
             guard:
                 authenticator: AppBundle\Security\Authenticator\TestAuthenticator
                 provider: test
+            logout_on_user_change: true
             anonymous: ~
 
     access_control:
