--- a/src/AppBundle/Resources/config/doctrine/CourseTeacher.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/CourseTeacher.orm.yml
@@ -38,14 +38,14 @@ AppBundle\Entity\CourseTeacher:
             type: boolean
             nullable: false
             options:
-                default: '0'
+                default: false
     manyToOne:
         courseInfo:
             targetEntity: CourseInfo
-            cascade: {  }
+            cascade: [ 'persist' ]
             fetch: LAZY
             mappedBy: null
-            inversedBy: null
+            inversedBy: courseTeachers
             joinColumns:
                 course_info_id:
                     referencedColumnName: id
