--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
 app:
     resource: '@AppBundle/Action/'
     type: annotation
+
+home:
+    path: /
+    defaults: { _controller: 'Appbundle\Action\HomeAction' }
