--- a/composer.json
+++ b/composer.json
@@ -31,14 +31,14 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/symfony": "3.4.*",
-        "symfony/webpack-encore-bundle": "^1.1",
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "phpunit/phpunit": "^6",
         "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^4.2"
+        "symfony/phpunit-bridge": "^4.2",
+        "symfony/webpack-encore-bundle": "^1.1"
     },
     "scripts": {
         "symfony-scripts": [
