remove orm.yml files

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -60,6 +60,8 @@ doctrine:
             syllabus:
                 connection: syllabus
                 auto_mapping: true
+                mappings:
+                    AppBundle: ~
 
 # Swiftmailer Configuration
 swiftmailer:
