--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@symfony/webpack-encore": "^0.23.0",
+    "bootstrap": "^4.3.1",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.0.1"
   }
