--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
     "bootstrap": "^4.3.1",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.0.1"
+  },
+  "dependencies": {
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.7"
   }
 }
