--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@babel/preset-env": "^7.3.4",
     "@symfony/webpack-encore": "^0.23.0",
     "autoprefixer": "^9.4.9",
     "bootstrap": "^4.3.1",
