--- a/src/LdapBundle/Resources/config/services.yml
+++ b/src/LdapBundle/Resources/config/services.yml
@@ -5,11 +5,26 @@ services:
         exclude: '../../{Entity,Repository,Tests}'
 
     # ALIAS
-    LdapBundle\Repository\PeopleRepositoryInterface: '@people_inmemory_repository'
+    LdapBundle\Repository\TeacherRepositoryInterface:
+        alias: %ldap_uns_teacher_repository_service%
 
     # LDAP
+    ldap_uns_adapter:
+        class: Symfony\Component\Ldap\Adapter\ExtLdap\Adapter
+        arguments:
+            -   host: '%ldap_uns_host%'
+                port: '%ldap_uns_port%'
+                encryption: '%ldap_uns_encryption%'
+                options: '%ldap_uns_options%'
 
+    ldap_uns:
+        class: Symfony\Component\Ldap\Ldap
+        arguments: ['@ldap_uns_adapter']
 
     # REPOSITORY
-    people_inmemory_repository:
-        class: 'LdapBundle\Repository\InMemory\PeopleInMemoryRepository'
+    teacher_inmemory_repository:
+        class: 'LdapBundle\Repository\InMemory\TeacherInMemoryRepository'
+
+    teacher_ldap_repository:
+        class: 'LdapBundle\Repository\Ldap\TeacherLdapRepository'
+        arguments: [ '@ldap_uns', '%ldap_uns_repositories%', '%ldap_uns_bind_dn%', '%ldap_uns_bind_password%' ]
