--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.7"
+    "jquery-sortablejs": "^1.0.1",
+    "popper.js": "^1.14.7",
+    "sortablejs": "^1.8.3"
   }
 }
