Forms to edit course content and activities

--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -39,6 +39,9 @@ services:
     AppBundle\Form\Course\EditPresentationCourseInfoType:
         arguments: [ '%course_teacher_factory%' ]
 
+    AppBundle\Form\CourseSection\CourseSectionType:
+        arguments: [ '@syllabus_entity_manager' ]
+
     # FIXTURE
     AppBundle\Fixture\CourseFixture:
         tags: ['doctrine.fixture.orm']
