--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "sass-loader": "^7.0.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.7.2",
     "jquery": "^3.3.1",
     "jquery-sortablejs": "^1.0.1",
     "popper.js": "^1.14.7",
