--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -20,6 +20,7 @@ services:
     AppBundle\Repository\UserRepositoryInterface: '@user_doctrine_repository'
     AppBundle\Repository\CourseInfoRepositoryInterface: '@course_info_doctrine_repository'
     AppBundle\Repository\CourseSectionRepositoryInterface: '@course_section_doctrine_repository'
+    AppBundle\Repository\CourseSectionActivityRepositoryInterface: '@course_section_activity_doctrine_repository'
     AppBundle\Repository\CourseTeacherRepositoryInterface: '@course_teacher_doctrine_repository'
 
     # AUTHENTICATORS
@@ -66,6 +67,10 @@ services:
 
     course_section_doctrine_repository:
         class: AppBundle\Repository\Doctrine\CourseSectionDoctrineRepository
+        arguments: ['@syllabus_entity_manager']
+
+    course_section_activity_doctrine_repository:
+        class: AppBundle\Repository\Doctrine\CourseSectionActivityDoctrineRepository
         arguments: ['@syllabus_entity_manager']
 
     course_teacher_doctrine_repository:
