--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 /.web-server-pid
 /app/config/parameters.yml
+/app/Resources/views/jquery.collection.html.twig
+/web/js/jquery.collection.js
 /build/
 /phpunit.xml
 /var/*
