--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -42,6 +42,7 @@ twig:
     form_themes:
         - 'bootstrap_4_layout.html.twig'
         - '@TetranzSelect2Entity/Form/fields.html.twig'
+        - 'jquery.collection.html.twig'
 
 # Doctrine Configuration
 doctrine:
