--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.7.2",
+    "bootbox": "^5.0.1",
     "ckeditor": "^4.11.3",
     "jquery": "^3.3.1",
     "jquery-sortablejs": "^1.0.1",
