--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.3.1",
     "jquery-sortablejs": "^1.0.1",
     "popper.js": "^1.14.7",
+    "select2": "^4.0.0",
     "sortablejs": "^1.8.3"
   }
 }
