--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -19,6 +19,7 @@ services:
     # ALIAS
     AppBundle\Repository\UserRepositoryInterface: '@user_doctrine_repository'
     AppBundle\Repository\ActivityRepositoryInterface: '@activity_doctrine_repository'
+    AppBundle\Repository\CourseEvaluationCtRepositoryInterface: '@course_evaluation_ct_doctrine_repository'
     AppBundle\Repository\CourseInfoRepositoryInterface: '@course_info_doctrine_repository'
     AppBundle\Repository\CourseSectionRepositoryInterface: '@course_section_doctrine_repository'
     AppBundle\Repository\CourseSectionActivityRepositoryInterface: '@course_section_activity_doctrine_repository'
@@ -74,6 +75,10 @@ services:
 
     activity_doctrine_repository:
         class: AppBundle\Repository\Doctrine\ActivityDoctrineRepository
+        arguments: ['@syllabus_entity_manager']
+
+    course_evaluation_ct_doctrine_repository:
+        class: AppBundle\Repository\Doctrine\CourseEvaluationCtDoctrineRepository
         arguments: ['@syllabus_entity_manager']
 
     course_info_doctrine_repository:
