--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -19,6 +19,7 @@ services:
     # ALIAS
     AppBundle\Repository\UserRepositoryInterface: '@user_doctrine_repository'
     AppBundle\Repository\ActivityRepositoryInterface: '@activity_doctrine_repository'
+    AppBundle\Repository\CourseAchievementRepositoryInterface: '@course_achievement_doctrine_repository'
     AppBundle\Repository\CourseEvaluationCtRepositoryInterface: '@course_evaluation_ct_doctrine_repository'
     AppBundle\Repository\CourseInfoRepositoryInterface: '@course_info_doctrine_repository'
     AppBundle\Repository\CourseSectionRepositoryInterface: '@course_section_doctrine_repository'
@@ -75,6 +76,10 @@ services:
 
     activity_doctrine_repository:
         class: AppBundle\Repository\Doctrine\ActivityDoctrineRepository
+        arguments: ['@syllabus_entity_manager']
+
+    course_achievement_doctrine_repository:
+        class: AppBundle\Repository\Doctrine\CourseAchievementDoctrineRepository
         arguments: ['@syllabus_entity_manager']
 
     course_evaluation_ct_doctrine_repository:
