Add prerequisites  to objectives tab form

--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -22,6 +22,7 @@ services:
     AppBundle\Repository\CourseAchievementRepositoryInterface: '@course_achievement_doctrine_repository'
     AppBundle\Repository\CourseEvaluationCtRepositoryInterface: '@course_evaluation_ct_doctrine_repository'
     AppBundle\Repository\CourseInfoRepositoryInterface: '@course_info_doctrine_repository'
+    AppBundle\Repository\CoursePrerequisiteRepositoryInterface: '@course_prerequisite_doctrine_repository'
     AppBundle\Repository\CourseSectionRepositoryInterface: '@course_section_doctrine_repository'
     AppBundle\Repository\CourseSectionActivityRepositoryInterface: '@course_section_activity_doctrine_repository'
     AppBundle\Repository\CourseTeacherRepositoryInterface: '@course_teacher_doctrine_repository'
@@ -88,6 +89,10 @@ services:
 
     course_info_doctrine_repository:
         class: AppBundle\Repository\Doctrine\CourseInfoDoctrineRepository
+        arguments: ['@syllabus_entity_manager']
+
+    course_prerequisite_doctrine_repository:
+        class: AppBundle\Repository\Doctrine\CoursePrerequisiteDoctrineRepository
         arguments: ['@syllabus_entity_manager']
 
     course_section_doctrine_repository:
