--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@symfony/webpack-encore": "^0.23.0",
     "autoprefixer": "^9.4.9",
     "bootstrap": "^4.3.1",
-    "bootstrap-toggle": "^2.2.2",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.0.1"
@@ -15,6 +14,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.7.2",
     "bootbox": "^5.0.1",
+    "bootstrap4-toggle": "^3.4.0",
     "ckeditor": "^4.11.3",
     "jquery": "^3.3.1",
     "jquery-sortablejs": "^1.0.1",
