--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/symfony": "3.4.*",
+        "tanigami/specification": "^1.3",
         "tetranz/select2entity-bundle": "^2.9",
         "twig/twig": "^1.0||^2.0"
     },
