--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootbox": "^5.0.1",
     "bootstrap4-toggle": "^3.4.0",
     "ckeditor": "^4.11.3",
+    "core-js": "2",
     "jquery": "^3.3.1",
     "jquery-sortablejs": "^1.0.1",
     "popper.js": "^1.14.7",
