--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "bootstrap": "^4.3.1",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
-    "sass-loader": "^7.0.1"
+    "sass-loader": "^7.0.1",
+    "webpack-notifier": "^1.6.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.7.2",
