Change composer json

--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "tanigami/specification": "^1.3",
         "tetranz/select2entity-bundle": "^2.9",
         "twig/twig": "^1.0||^2.0",
-        "unicesil/syllabus-apogee-importer-bundle": "dev-master#aff3fd",
+        "unicesil/syllabus-apogee-importer-bundle": "dev-master#face48",
         "unicesil/syllabus-importer-toolkit": "dev-master#79a0c7"
     },
     "require-dev": {
