--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -20,9 +20,12 @@ parameters:
     syllabus_test_database_charset: UTF8
 
     mailer_transport: smtp
-    mailer_host: 127.0.0.1
+    mailer_host: smtp.unice.fr
     mailer_user: ~
     mailer_password: ~
+
+    # An email address to whom “Publish” and “Advice” emails are sent.
+    mailer_target: user@univ.fr
 
     # A secret key that's used to generate certain security-related tokens
     secret: ThisTokenIsNotSoSecretChangeIt
