--- a/composer.json
+++ b/composer.json
@@ -37,8 +37,9 @@
         "tetranz/select2entity-bundle": "^2.9",
         "twig/extensions": "^1.5",
         "twig/twig": "^1.0||^2.0",
-        "unicesil/syllabus-apogee-importer-bundle": "dev-master#8675a4",
-        "unicesil/syllabus-importer-toolkit": "dev-master#79a0c7"
+        "unicesil/syllabus-apogee-importer-bundle": "dev-master#b8fedf",
+        "unicesil/syllabus-importer-toolkit": "dev-master#45a911",
+        "unicesil/syllabus-moodle-importer-bundle": "dev-master#170772"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.1",
