--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "symfony/symfony": "3.4.*",
         "tanigami/specification": "^1.3",
         "tetranz/select2entity-bundle": "^2.9",
+        "twig/extensions": "^1.5",
         "twig/twig": "^1.0||^2.0",
         "unicesil/syllabus-apogee-importer-bundle": "dev-master#8675a4",
         "unicesil/syllabus-importer-toolkit": "dev-master#79a0c7"
