update composer name project

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "fred/syllabus",
+    "name": "unicesil/syllabus",
     "license": "proprietary",
     "type": "project",
     "autoload": {
